--- a/service-items.properties
+++ b/service-items.properties
@@ -1,2 +1,2 @@
 server.port=8005
-configuracion.texto= Configuracion para el entorno de desarrollo
+texto= Configuracion para el entorno de desarrollo
