--- a/service-items.properties
+++ b/service-items.properties
@@ -1,2 +1,2 @@
 server.port=8005
-texto= Configuracion para el entorno de desarrollo
+configuracion.texto= Configuracion para el entorno de desarrollo
